# analytics-backend-monorepo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  claude-review.sh  mypy.ini  pyproject.toml  validate_fixes.py
.claude/commands/: groom-backlog.md
.githooks/: post-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  claude.yml
alembic/: env.py
alembic/versions/: 51373eb465d5_initial_migration.py  5a9252621c55_add_ml_experiment_tracking_tables.py  e5356177cc7e_add_foreign_key_constraints_and_.py
docker/: Dockerfile.analytics-api  Dockerfile.batch-processor  Dockerfile.ml-inference  Dockerfile.test-client  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  test-requirements.txt
docker/observability/: alertmanager.yml  otel-collector-config.yml  prometheus.yml
docker/observability/grafana/dashboards/: analytics-overview.json
docker/observability/grafana/provisioning/dashboards/: dashboards.yml
docker/observability/grafana/provisioning/datasources/: datasources.yml
docker/streaming-analytics/: Dockerfile  docker-compose.prod.yml  entrypoint.sh  healthcheck.py
docs/: ci_timeout_configuration.md  data_quality_framework.md  data_quality_integration_guide.md  database_migrations.md  jwt_authentication_rbac.md  observability_guide.md
docs/streaming_analytics/: README.md  deployment.md  kafka_setup.md  ml_integration.md  monitoring_alerting.md  performance_tuning.md  troubleshooting.md  websocket_api.md
helm/streaming-analytics/: Chart.yaml  values.yaml
k8s/streaming-analytics/: README.md  configmap.yaml  hpa.yaml  ml-inference.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  secrets.yaml  stream-processor.yaml  websocket-service.yaml
libs/analytics_core/: __init__.py  ab_testing.py  ab_testing_async.py  ab_testing_repository.py  auth.py  database.py  models.py  models_jwt.py  pyproject.toml  statistics.py
libs/api_common/: __init__.py  documentation.py  middleware.py  pyproject.toml  response_models.py  versioning.py
libs/config/: __init__.py  api_config.py  base.py  database.py  feature_flags.py  pyproject.toml  secrets.py
libs/data_processing/: __init__.py  alerting.py  data_quality.py  data_quality_simple.py  lineage.py  profiling.py  pyproject.toml
libs/data_warehouse/: __init__.py  dependencies.py  pool.py
libs/data_warehouse/connectors/: __init__.py  base.py  bigquery.py  config.py  factory.py  pool_proxy.py  redshift.py  snowflake.py
libs/data_warehouse/olap/: __init__.py  cube.py  engine.py  operations.py
libs/data_warehouse/query/: __init__.py  cache.py  federation.py
libs/ml_models/: __init__.py  ab_testing.py  artifact_storage.py  config.py  experiment_tracking.py  experiments.py  feature_store.py  feature_store_integration.py  monitoring.py  pyproject.toml  registry.py  retraining.py  serving.py  versioning.py
libs/observability/: __init__.py  config.py  instrumentation.py  logging.py  metrics.py  middleware.py  pyproject.toml  tracing.py
libs/streaming_analytics/: __init__.py  circuit_breaker.py  config.py  connection_pool.py  event_store.py  kafka_manager.py  monitoring.py  performance_profiler.py  performance_testing.py  processor.py  realtime_ml.py  secrets_manager.py  websocket_server.py
libs/workflow_orchestration/: __init__.py  dag.py  engine.py  monitoring.py  retry.py  scheduler.py  state.py  storage.py
reviews/manual/: pr-55-20250725.md  pr-58-security-20250726_1242.md
scripts/: benchmark_streaming_performance.py  deploy-streaming-analytics.sh  run_integration_tests.sh  setup-claude-review.sh
services/analytics_api/: main.py  pyproject.toml
services/analytics_api/routes/: __init__.py  ab_testing.py  admin.py  auth.py  data_quality.py  data_warehouse.py  experiments.py  feature_store.py  model_exceptions.py  model_loader.py  models.py
services/batch_processor/: main.py  pyproject.toml
services/data_ingestion/: main.py  pyproject.toml
services/feature_store/: cache.py  core.py  lineage.py  main.py  models.py  monitoring.py  pipeline.py  pyproject.toml  routes.py
services/feature_store/migrations/: 001_initial_feature_store_schema.py  002_add_pipeline_monitoring_lineage.py
services/feature_store/tests/: __init__.py  test_core.py  test_lineage.py  test_models.py  test_monitoring.py  test_pipeline.py  test_routes.py
services/ml_inference/: main.py  pyproject.toml
services/reporting_engine/: celery_app.py  main.py  models.py  pyproject.toml  tasks.py
services/reporting_engine/routes/: __init__.py  dashboard.py  exports.py  reports.py
services/reporting_engine/tests/: __init__.py  conftest.py  test_reports.py  test_tasks.py
tests/: __init__.py  conftest.py  test_ab_testing_framework.py  test_advanced_configuration.py  test_analytics_api.py  test_data_quality_framework.py  test_data_warehouse.py  test_database_migrations.py  test_deployment_configuration.py  test_experiment_tracking.py  test_feature_store.py  test_jwt_authentication.py  test_model_registry_api.py  test_observability.py  test_openapi_documentation.py  test_streaming_analytics.py  test_workflow_orchestration.py
tests/integration/: __init__.py  conftest.py  test_kafka_integration.py  test_streaming_e2e.py  websocket_test_client.py
tests/libs/: test_analytics_core.py  test_data_processing.py  test_ml_models.py  test_ml_models_advanced.py  test_streaming_security.py
