[project]
name = "analytics-core"
version = "0.1.0"
description = "Core analytics utilities and shared functionality"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "PyJWT>=2.8.0",
    "fastapi>=0.104.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"