[project]
name = "data-processing"
version = "0.1.0"
description = "Data processing utilities for ETL and transformations"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"