[project]
name = "ml-models"
version = "0.1.0"
description = "Machine learning model utilities and shared components"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # MLOps dependencies
    "mlflow>=2.15.1",
    "evidently>=0.7.0",
    "lightgbm>=4.1.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"