[project]
name = "batch-processor"
version = "0.1.0"
description = "Background job processing service"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "structlog>=23.2.0",
    "analytics-core",
    "data-processing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"