[project]
name = "ml-inference"
version = "0.1.0"
description = "ML model inference service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "ml-models",
    "api-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"