[project]
name = "reporting-engine"
version = "0.1.0"
description = "Report generation service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "structlog>=23.2.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "analytics-core",
    "data-processing",
    "api-common",
    "config",
    "observability",
    "streaming-analytics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"